simplified a bunch of code using java 17